# AgentKaizen

./: .gitignore  AGENTS.md  AgentKaizen_Presentation.pptx  CLAUDE.md  EVALS.md  PRODUCT.md  README.md  STRUCTURE.md  TECH.md  anthropic.md  codex_casegen.py  codex_evals.py  codex_interactive_scoring.py  codex_interactive_sync.py  codex_scoring.py  codex_weave.py  generate_pptx.py  openai.md  presentation_slides.md  pyproject.toml  user_workflow.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_update.md  feature_request.md
.github/workflows/: ci.yml
archive/: generate_pptx.py
docs/reference/: anthropic.md  openai.md
docs/workflows/: user_workflow.md
evals/: cases.jsonl
evals/cases/: core.jsonl  docs-steering.jsonl  language-steering.jsonl  multimodal.jsonl  regressions.jsonl  workflow.jsonl
evals/variants/: example_add_line_to_readme.json  example_agents_japanese_response.json
scripts/: codex_weave.py
skill/: agentkaizen.skill
skill/agentkaizen/: REPO_README.md  SKILL.md
skill/agentkaizen/agents/: grader.md
skill/agentkaizen/references/: eval-format.md
skill/optimize-coding-agent-skill/agents/: analyzer.md  grader.md
skill/optimize-coding-agent-skill/optimize-coding-agent-skill/: SKILL.md
skill/optimize-coding-agent-skill/optimize-coding-agent-skill/agents/: analyzer.md  grader.md
skill/optimize-coding-agent-skill/scripts/: check_setup.py
src/agentkaizen/: __init__.py  _comparator.py  _llm_judge.py  _local_eval.py  _pii.py  _trace_log.py  _weave_compat.py  casegen.py  claude_code_session.py  cli.py  config.py  core.py  evals.py  oneshot.py  scoring.py  session_scoring.py  session_sync.py
src/agentkaizen/runners/: __init__.py  base.py  claude_code.py  codex.py  registry.py
tests/: conftest.py  test_aggregate_benchmark.py  test_blind_comparator.py  test_claim_extraction.py  test_claude_code_e2e.py  test_claude_code_session.py  test_cli.py  test_codex_casegen.py  test_codex_evals.py  test_codex_interactive_scoring.py  test_codex_interactive_sync.py  test_codex_scoring.py  test_codex_weave.py  test_compare.py  test_config.py  test_eval_interpretation.py  test_llm_judge.py  test_local_eval.py  test_pii.py  test_runners.py  test_shims.py  test_trace_log.py  test_weave_compat.py
tests/fixtures/: fake_codex.py
