[project]
name = "agentkaizen"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "weave>=0.52.30",
]

[project.scripts]
codex-weave = "codex_weave:main"
codex-eval = "codex_evals:main"
codex-casegen = "codex_casegen:main"
codex-weave-sync-interactive = "codex_interactive_sync:main"
codex-score-interactive = "codex_interactive_scoring:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["codex_weave", "codex_evals", "codex_scoring", "codex_casegen", "codex_interactive_sync", "codex_interactive_scoring"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
