[project]
name = "agentkaizen"
version = "0.1.0"
description = "Portable CLI evaluation tool for AI coding agents — trace, score, and compare agent behavior locally or with W&B Weave"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "AgentKaizen Contributors" }]
requires-python = ">=3.12"
dependencies = [
  "python-dotenv>=1.0",
  "pydantic>=2.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
weave = ["weave[scorers]>=0.52.30"]

[project.urls]
"Homepage" = "https://github.com/TheIllusionOfLife/AgentKaizen"
"Bug Tracker" = "https://github.com/TheIllusionOfLife/AgentKaizen/issues"

[project.scripts]
agentkaizen = "agentkaizen.cli:main"
codex-weave = "codex_weave:main"
codex-eval = "codex_evals:main"
codex-casegen = "codex_casegen:main"
codex-weave-sync-interactive = "codex_interactive_sync:main"
codex-score-interactive = "codex_interactive_scoring:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["codex_weave", "codex_evals", "codex_scoring", "codex_casegen", "codex_interactive_sync", "codex_interactive_scoring"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "agentkaizen[weave]",
  "pytest>=8.3.0",
  "python-pptx>=1.0.0",
  "ruff>=0.11.0",
]
dev-minimal = [
  "pytest>=8.3.0",
  "python-pptx>=1.0.0",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
